main/default/objects/Learning_Category__c/Learning_Category__c.object-meta.xml
<CustomObject>
    <label>Learning Category</label>
    <nameField>
        <label>Learning Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Categories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>