main/default/objects/Learning_Category__c/fields/Hide_From_Catalog_Home__c.field-meta.xml
<CustomField>
    <fullName>Hide_From_Catalog_Home__c</fullName>
    <inlineHelpText>Enable this option if you do not want to display this category in the catalog home page</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Hide from Catalog Home</label>
    <type>Checkbox</type>
</CustomField>