main/default/objects/Learning_Category__c/fields/Is_Internal__c.field-meta.xml
<CustomField>
    <fullName>Is_Internal__c</fullName>
    <inlineHelpText>Enable this option if you do not want to display this category to external users</inlineHelpText>
    <defaultValue>false</defaultValue>
    <label>Is Internal</label>
    <type>Checkbox</type>
</CustomField>