main/default/objects/Learning_Category__c/fields/Total_Training_Plans__c.field-meta.xml
<CustomField>
    <fullName>Total_Training_Plans__c</fullName>
    <label>Total Training Plans</label>
    <summaryForeignKey>Training_Plan_Category__c.Learning_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>